Инициализация ветки